--- a/styles/style.css
+++ b/styles/style.css
@@ -525,7 +525,7 @@ footer * {
 		background: #000000;
 		border-radius: 10px;
 		position: absolute;
-		transition: 0.5s ease-in-out;
+		transition: 0.4s ease-in-out;
 	}
 
 	.burger-icon::before {
@@ -559,12 +559,12 @@ footer * {
 		grid-template-columns: 1fr;
 		background: var(--branco);
 		box-shadow: rgba(0, 0, 0, 0.1) -3px 3px 4px 0px;
-		transition: 0.5 ease-in-out;
+		transition: 0.4s ease-in-out;
 	}
 
 	.invisible {
-		transform: translate(500px);
-		transition: 0.7s ease-in-out;
+		transform: translate(100%, 0);
+		transition: 0.4s ease-in-out;
 	}
 
 	.burger-nav > div {
